--- a/static/css/base.css
+++ b/static/css/base.css
@@ -317,3 +317,64 @@ input[name='q']::placeholder {
       width: 200px;
       height: 200px;
   }
+
+  /* footer css */
+    footer.page-footer {
+        bottom: 0;
+        color: #fff;
+    }
+    .special-color-dark {
+        background-color: #263238 !important;
+    }
+
+    .font-small {
+        font-size: .9rem;
+    }
+    a.waves-effect, a.waves-light {
+        display: inline-block;
+    }
+    .btn-fb {
+        color: #fff;
+        background-color: #3b5998 !important;
+    }
+
+    .btn-floating {
+        position: relative;
+        z-index: 1;
+        display: inline-block;
+        padding: 0;
+        margin: 10px;
+        overflow: hidden;
+        vertical-align: middle;
+        cursor: pointer;
+        border-radius: 50%;
+        -webkit-box-shadow: 0 5px 11px 0 rgb(0 0 0 / 18%), 0 4px 15px 0 rgb(0 0 0 / 15%);
+        box-shadow: 0 5px 11px 0 rgb(0 0 0 / 18%), 0 4px 15px 0 rgb(0 0 0 / 15%);
+        -webkit-transition: all 0.2s ease-in-out;
+        transition: all 0.2s ease-in-out;
+        width: 47px;
+        height: 47px;
+    }
+
+    .btn-floating i {
+        display: inline-block;
+        width: inherit;
+        color: #fff;
+        text-align: center;
+        font-size: 1.25rem;
+        line-height: 47px;
+    }    
+
+    .btn-ins {
+        background-color: #ec4a89 !important;
+    }
+
+    footer.page-footer .footer-copyright {
+        overflow: hidden;
+        color: rgba(255,255,255,0.6);
+        background-color: rgba(0,0,0,0.2);
+    }
+
+    footer.page-footer a {
+        color: #fff;
+    }
