--- a/templates/base.html
+++ b/templates/base.html
@@ -139,6 +139,39 @@
     {% block content %}
     {% endblock %}
 
+    <!-- Footer -->
+    <footer class="page-footer font-small special-color-dark pt-4 mt-4">
+
+        <!-- Footer Elements -->
+        <div class="container">
+    
+        <!-- Social buttons -->
+        <ul class="list-unstyled list-inline text-center">
+            <li class="list-inline-item">
+            <a class="btn-floating btn-fb mx-1">
+                <i class="fab fa-facebook-f"> </i>
+            </a>
+            </li>
+            <li class="list-inline-item">
+            <a class="btn-floating btn-ins mx-1">
+                <i class="fab fa-instagram"> </i>
+            </a>
+            </li>
+        </ul>
+        <!-- Social buttons -->
+    
+        </div>
+        <!-- Footer Elements -->
+    
+        <!-- Copyright -->
+        <div class="footer-copyright text-center py-3">© 2021 Copyright:
+        <a href="#"> example.com</a>
+        </div>
+        <!-- Copyright -->
+    
+    </footer>
+    <!-- Footer -->
+
     {% block postloadjs %}
     <script type="text/javascript">
         $('.toast').toast('show');
