--- a/templates/base.html
+++ b/templates/base.html
@@ -143,10 +143,30 @@
     <footer class="page-footer font-small special-color-dark pt-4 mt-4">
 
         <!-- Footer Elements -->
-        <div class="container">
+        <footer class="page-footer text-shadow red accent-3">
+            <div class="container">
+                <div class="row">
+                    <div class="col s12 center-align">
+                        Welcome to my Shoes Shop 
+                    </div>
+                    <div class="col s12 right-align">
+                        <div class="social-links">
+                            <a class="grey-text text-lighten-3" href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram fa-2x"></i></a>
+                            <a class="grey-text text-lighten-3" href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter fa-2x"></i></a>
+                            <a class="grey-text text-lighten-3" href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook fa-2x"></i></a>  
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-copyright">
+                <div class="container centre-align valign-wrapper">
+                    This is my personal website created only for learnig purposes 
+                </div>
+            </div>
+        </footer>
     
         <!-- Social buttons -->
-        <ul class="list-unstyled list-inline text-center">
+        <!-- <ul class="list-unstyled list-inline text-center">
             <li class="list-inline-item">
             <a class="btn-floating btn-fb mx-1">
                 <i class="fab fa-facebook-f"> </i>
@@ -157,16 +177,16 @@
                 <i class="fab fa-instagram"> </i>
             </a>
             </li>
-        </ul>
+        </ul> -->
         <!-- Social buttons -->
     
         </div>
         <!-- Footer Elements -->
     
         <!-- Copyright -->
-        <div class="footer-copyright text-center py-3">© 2021 Copyright:
+        <!-- <div class="footer-copyright text-center py-3">© 2021 Copyright:
         <a href="#"> example.com</a>
-        </div>
+        </div> -->
         <!-- Copyright -->
     
     </footer>
